--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+
+  animated_text_kit: ^4.2.1
+  animate_do: ^2.0.0
   font_awesome_flutter: ^9.1.0
   flutter:
     sdk: flutter
